# tarang

./: .gitignore  CMakeLists.txt  README
info/: prog_para.d
info/modules/RB/in/: field_in.d
info/modules/RB_SLIP_MHD/in/: field_in.d  para.d
lib/IncFlow/: IncVF.cc  IncVF.h
lib/IncFlow/EnergyTrdir/: compute_cylin_ring_tr.cc  compute_flux.cc  compute_force_feed.cc  compute_ring_tr.cc  compute_shell_tr.cc
lib/IncFlow/misc/: zero_mode_RB_slip.cc
lib/IncFlow/nlin_calc/: compute_nlin_SF.cc  compute_nlin_VF_SF.cc
lib/IncFluid/: CMakeLists.txt  IncFluid.h  compute_rhs.cc
lib/IncFluid/force/: compute_force_RB.cc
lib/IncFluid/input/: init_cond_TG.cc  init_cond_energy.cc  init_cond_field.cc  init_cond_main.cc  init_cond_modes.cc
lib/IncFluid/output/: output_ET.cc  output_energy.cc  output_field.cc
lib/IncFluid/time_advance/: single_time_step.cc  time_advance_RBslipMHD.cc  time_advance_SF.cc  time_advance_VF_MHD.cc
lib/basis_basicfn/: extern_def_vars.h
lib/fields/: Cvf.cc  Cvf.h
src/: main.cc  main.h  read_para.cc  read_prog_para.cc
src/IFluid/: Ifluid_diag_main.cc  Ifluid_main.cc
src/IMHD/: IMHD_diag_main.cc  IMHD_main.cc
src/IScalar/: Iscalar_diag_main.cc  Iscalar_main.cc
src/NB/: NonBoussinesq_main.cc
src/RBslip/: RB_slip_diag_main.cc  RB_slip_main.cc
src/RBslipMHD/: RB_slipMHD_main.cc  chandrasekhar.h
test/test-fftw/: .gitignore  CMakeLists.txt  Makefile  test_mpi.cc
